--- a/views/rental/rental.html
+++ b/views/rental/rental.html
@@ -11,13 +11,13 @@
         <div class="col-xl-4 col-l-4 col-sm-12 col-12 col-md-6 p-1 mb-4 d-flex align-items-stretch mt-4">
             <div class="card w-100 d-flex flex-column">
                 <div class="view overlay border-bottom">
-                    <img class="card-img-top" src="https://image.tmdb.org/t/p/w500/{{movie.image_url}}" alt="{{ movie.name }}" loading="lazy">
+                    <img class="card-img-top" src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}" alt="{{ movie.name }}" loading="lazy">
                 </div>
                 <div class="card-body d-flex flex-column flex-grow-1">
                     <div>
-                        <h2 class="card-title">{{ movie.name }}</h2>
+                        <h2 class="card-title">{{ movie.title }}</h2>
                         <hr class="w-100" />
-                        <p class="card-text mb-0">{{ movie.synopsis }}</p>
+                        <p class="card-text mb-0">{{ movie.overview }}</p>
                         <hr class="w-100" />
                         <div class="row mt-2">
                             <div class="col text-start">
