--- a/views/forum/forum.html
+++ b/views/forum/forum.html
@@ -6,7 +6,7 @@
       <h1 class="text-light display-4"><strong>FORUM</strong></h1>
     </div>
     {% if 'user_id' in session %}
-    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
         Create a Thread
     </button>
     {%endif%}
