--- a/views/forum/forum.html
+++ b/views/forum/forum.html
@@ -6,16 +6,19 @@
       <h1 class="text-light display-4"><strong>FORUM</strong></h1>
     </div>
     {% if 'user_id' in session %}
-    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
         Create a Thread
     </button>
     {%endif%}
     <div class="d-flex flex-column mt-3">
         <div class="list-group">
             {%for thread in threads %}
-            <a href="/forum/single/{{thread.id}}" class="d-flex flex-column list-group-item list-group-item-action" aria-current="true">
+            <a href="/forum/single/{{thread._id}}" class="d-flex flex-column list-group-item list-group-item-action" aria-current="true">
               <div><h3 class = "mt-2">{{thread.title}}</h3></div>
-              <div><p>Created by {{thread.username}} on {{thread.created_time}}</div>
+              <div><p>Created by {{thread.user_info.username}} on {{thread.created_time|format_datetime}}</div>
+              {% if thread.edited == 1 %}
+              <div>Edited on: {{thread.edited_time|format_datetime}}</div>
+              {%endif%}
             </a>
             {%endfor%}
           </div>
